--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,17 +16,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <my.example.snowflakesview.view.Snowflakes
+    <my.example.snowflakesview.view.SnowflakesView
         android:id="@+id/snowflakes"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:colorFlakes="#FF00ddaa"
-        app:countFlakes="3"
+        app:colorFlakes="#FFff88cc"
+        app:countFlakes="10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
